projects/compiler/test/typechecker/decorators/error_enum_as_decorator.out
Error at %TEST_DIR%/typechecker/decorators/error_enum_as_decorator.abra:5:5
Unexpected token '.', expected one of 'val', 'var', 'func', 'type', 'enum', 'decorator', '@', 'pub':
  |  @Foo.Bar(b: "asdf")
         ^
