projects/compiler/test/typechecker/decorators/error_enum_as_decorator.abra
enum Foo {
  Bar
}

@Foo.Bar(b: "asdf")
func foo() {

}
